RESOLVED FIXED305879
[iOS] Popover light dismiss does not work when touch event regions are enabled
https://bugs.webkit.org/show_bug.cgi?id=305879
Summary [iOS] Popover light dismiss does not work when touch event regions are enabled
Lily Spiniolas
Reported 2026-01-20 16:25:21 PST
Attachments
Lily Spiniolas
Comment 1 2026-01-20 16:46:31 PST
EWS
Comment 2 2026-01-21 00:00:13 PST
Committed 305924@main (309186d68a0c): <https://commits.webkit.org/305924@main> Reviewed commits have been landed. Closing PR #56935 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.