[iOS] Popover light dismiss does not work when touch event regions are enabled https://bugs.webkit.org/show_bug.cgi?id=305879 rdar://168328282

Reviewed by Tim Horton.

When a popover is present on the page, tapping outside the popover to dismiss
it does not work on iOS when touch event regions are enabled.

In RenderLayerBacking::updateEventRegion(), we check
`RenderLayerBacking::maintainsEventRegion()` to see if we should proceed with
the update. To determine whether or not we should maintain an event region,
we check if there are touch event handlers, but we fail to account for the
fact that we also need to maintain an event region if a popover requires pointer
event handling.

To resolve this, simply return true in `RenderLayerBacking::maintainsEventRegion()`
if the renderer's document requires pointer event handling for the popover.

Tested by
imported/w3c/web-platform-tests/html/semantics/popovers/popover-light-dismiss-with-anchor.tentative.html

* Source/WebCore/rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::maintainsEventRegion const):

Canonical link: https://commits.webkit.org/305924@main